k8s/manifests/react-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
spec:
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer  # THIS IS KEY
